# CyberKnife

./: CMakeLists.txt  README.md  package.xml
config/: controller.yaml
design_files/: base.SLDPRT  finale.SLDASM  laser.SLDPRT  link1.SLDPRT  link2.SLDPRT  link3.SLDPRT  link4.SLDPRT
launch/: config.rviz  display.launch  empty_world.launch  gazebo.launch  rviz.launch
meshes/: base.STL  laser.STL  link1.STL  link2.STL  link3.STL  link4.STL
src/: cik.py  detect.cpp  ik.cpp  ik.py  ikt.py  teleop.py
urdf/: fin_xac.xacro  finale.csv  finale.urdf  finale1.urdf  ydlidar.urdf
world/: competition_arena.world  empty.world
